--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,3 +4,12 @@
 //   "module": "commonjs"
 //   }
 // }
+{
+  "compilerOptions": {
+    "checkJs": true
+  },
+  "exclude": [
+    "node_modules",
+    "**/node_modules/*"
+  ]
+}
