--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.0.0",
-    "jest": "^23.6.0",
+    "bootstrap-vue": "^2.0.1",
+    "jest": "^24.9.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "vue": "^2.6.10",
@@ -27,14 +27,14 @@
     "*.js"
   ],
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-plugin-unit-jest": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "^4.0.0-rc.3",
+    "@vue/cli-plugin-eslint": "^4.0.0-rc.3",
+    "@vue/cli-plugin-unit-jest": "^4.0.0-rc.3",
+    "@vue/cli-service": "^4.0.0-rc.3",
     "@vue/eslint-config-airbnb": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
     "vue-template-compiler": "^2.6.10"
   },
