--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.3",
     "bootstrap-vue": "^2.0.1",
+    "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.9.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
@@ -36,6 +38,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^4.19.1",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
