use treedoc parser

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.9.0",
     "jquery": "^3.4.1",
+    "jsonex-treedoc": "../jsonextreedocjs",
     "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-resize": "^0.4.5",
