--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
     "gh-pages": "^2.1.1"
 
   },
