--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.4.1",
     "jsonex-treedoc": "../jsonextreedocjs",
     "lodash": "^4.17.15",
+    "msplit": "^0.1.0",
     "vue": "^2.6.10",
     "vue-resize": "^0.4.5",
     "vue2-datatable-component": "github:TrueCarry/vue2-datatable"
@@ -41,9 +42,8 @@
     "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
-    "vue-template-compiler": "^2.6.10",
-    "gh-pages": "^2.1.1"
-
+    "gh-pages": "^2.1.1",
+    "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
     "> 1%",
