--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "treedoc-viewer",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "main": "./dist/lib/lib.common.js",
+  "typings": "./dist/lib/src/lib.d.ts",
   "files": [
     "dist/lib/*",
     "src/*",
