--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-class-component": "^7.2.3",
     "vue-codemirror-lite": "^1.0.4",
     "vue-property-decorator": "^9.0.0",
+    "vue-router": "^3.4.6",
     "vue2-datatable-component": "github:TrueCarry/vue2-datatable",
     "yaml": "^1.10.0"
   },
