--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,37 +1,18 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-
-   {
-     "type": "node",
-     "request": "launch",
-     "name": "Launch Program",
-     "program": "${workspaceFolder}/node_modules/.bin/jest",
-     "env": {
-        "VUE_CLI_BABEL_TARGET_NODE": "true",
-        "VUE_CLI_BABEL_TRANSPILE_MODULES": "true",
-     },
-     "args": [
-       "-i",
-     ]
-   },
-    // {
-    //   "type": "node",
-    //   "request": "launch",
-    //   "name": "Jest Current File",
-    //   "program": "${workspaceFolder}/node_modules/.bin/vue-cli-service",
-    //   "args": ["test:unit"],
-    //   "console": "integratedTerminal",
-    //   "internalConsoleOptions": "neverOpen"
-    // },
-    {
-      "type": "node",
-      "request": "attach",
-      "port": 9229,
-      "name": "attach",
-    },
-  ]
-}
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+      {
+        "runtimeExecutable": "/Users/jianwu.chen/.nvm/versions/node/v16.17.0/bin/node", 
+        "type": "pwa-node",
+        "request": "launch",
+        "name": "Debug Current Test File",
+        "autoAttachChildProcesses": true,
+        "skipFiles": ["<node_internals>/**", "**/node_modules/**"],
+        "program": "${workspaceRoot}/node_modules/vitest/vitest.mjs",
+        "args": ["run", "${relativeFile}"],
+        "smartStep": true,
+        "console": "integratedTerminal"
+      }
+    ]
+  }
