--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "treedoc-viewer",
-  "version": "0.1.49",
+  "version": "0.1.44",
   "main": "./dist/lib/lib.common.js",
-  "typings": "./dist/lib/lib.d.ts",
+  "typings": "./dist/lib/src/lib.d.ts",
   "files": [
     "dist/lib/*",
     "src/*",
@@ -26,7 +26,7 @@
     "jquery": "^3.5.1",
     "jsdom": "^20.0.0",
     "lodash": "^4.17.19",
-    "msplit": "^0.1.23",
+    "msplit": "0.1.20",
     "treedoc": "^0.3.30",
     "ts-node": "~10.7.0",
     "vue": "^2.6.11",
