--- a/v2/package.json
+++ b/v2/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
@@ -27,8 +29,10 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue": "^5.2.1",
+    "playwright": "^1.58.2",
     "typescript": "~5.7.2",
     "vite": "^6.1.0",
+    "vitest": "^3.2.4",
     "vue-tsc": "^2.2.0"
   }
 }
