--- a/v2/package.json
+++ b/v2/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:run": "vitest run",
-    "build:v1": "cd ../v1 && V1_SUBDIRECTORY=1 NODE_OPTIONS=--openssl-legacy-provider yarn build-app",
+    "build:v1": "cd ../v1 && yarn install --ignore-engines && V1_SUBDIRECTORY=1 NODE_OPTIONS=--openssl-legacy-provider yarn build-app",
     "deploy:prepare": "yarn build && yarn build:v1 && cp -r ../v1/dist/app dist/v1",
     "deploy": "yarn deploy:prepare && gh-pages -d dist && gh-pages -d dist -r git@github.com:treedoc/treedoc.github.io.git -b master"
   },
