--- a/v2/package.json
+++ b/v2/package.json
@@ -20,7 +20,9 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@primevue/themes": "^4.2.5",
     "chart.js": "^4.5.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "codemirror": "^6.0.1",
+    "date-fns": "^4.1.0",
     "lodash-es": "^4.17.21",
     "pinia": "^2.2.8",
     "primeicons": "^7.0.0",
